Redraw report markers on update

--- a/2016-01-15/index.html
+++ b/2016-01-15/index.html
@@ -13,7 +13,8 @@
     Lat: {{demoMapCtrl.boundingRect.latitude}}<br />
     Lng: {{demoMapCtrl.boundingRect.longitude}}<br />
     Zoom:{{demoMapCtrl.boundingRect.zoom}}
-    <leaflet-map bounding-rect="demoMapCtrl.boundingRect" reports="{{demoMapCtrl.reports}}"></leaflet-map>
+    <button ng-click="demoMapCtrl.refresh()">Refresh</button>
+    <leaflet-map bounding-rect="demoMapCtrl.boundingRect" reports="demoMapCtrl.reports"></leaflet-map>
 </div>
 <script src="script.js"></script>
 </body>
