Use  to syncronize bounds

--- a/2016-01-15/index.html
+++ b/2016-01-15/index.html
@@ -15,6 +15,7 @@
     Zoom:<input ng-model="demoMapCtrl.boundingRect.zoom" type="number"/>
     <button ng-click="demoMapCtrl.refresh()">Refresh</button>
     <leaflet-map bounding-rect="demoMapCtrl.boundingRect" reports="demoMapCtrl.reports"></leaflet-map>
+    <leaflet-map bounding-rect="demoMapCtrl.boundingRect" reports="demoMapCtrl.reports"></leaflet-map>
 </div>
 <script src="script.js"></script>
 </body>
