Add ability check history for reports

--- a/2016-01-15/index.html
+++ b/2016-01-15/index.html
@@ -25,8 +25,8 @@
                     <tr><td>Size:</td><td><input ng-model="demoMapCtrl.mode.options.size" type="number"/></td></tr>
                     <tr><td>Position:</td><td><input ng-model="demoMapCtrl.mode.options.position" disabled="true"/></td></tr>
                     <tr><td colspan="2">
-                        from 0 to {{demoMapCtrl.maxSteps}}<br />
-                        <input style="width: 100%;" type="range" min="0" max="{{demoMapCtrl.maxSteps}}"  ng-model="demoMapCtrl.mode.options.position" />
+                        from 0 to {{demoMapCtrl.maxStepNumber}}<br />
+                        <input style="width: 100%;" type="range" min="0" max="{{demoMapCtrl.maxStepNumber}}"  ng-model="demoMapCtrl.mode.options.position" />
                     </td></tr>
                 </table>
             </td>
