Close modal from modalService

--- a/2016-01-20/partial.html
+++ b/2016-01-20/partial.html
@@ -1,1 +1,6 @@
-<div>This is SPARTIAL!!!! {{popup.controllerWorks}} {{popup.data}} {{popup.otherData}}</div>
+<div>
+    This is SPARTIAL!!!! {{popup.controllerWorks}} {{popup.data}} {{popup.otherData}}
+    <hr/>
+    <button ng-click="popup.closeModal(true)">OK</button>
+    <button ng-click="popup.closeModal(false)">Cancel</button>
+</div>
