Move methods into controller and sale watch logic at link

--- a/2016-01-15/index.html
+++ b/2016-01-15/index.html
@@ -37,7 +37,7 @@
                 <div style="width: 600px; height: 400px;">
                     <leaflet-map
                             bounding-rect="demoMapCtrl.boundingRect"
-                            reports="demoMapCtrl.reports"
+                            reports="demoMapCtrl.allReports"
                             mode="demoMapCtrl.mode" />
                 </div>
             </td>
